# wicap-assistant

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.assistant.yml  pyproject.toml
docs/: AGENT_ALIGNMENT.md  ASSISTANT_MISSION.md  ASSISTANT_ROADMAP.md  CROSS_REPO_INTELLIGENCE_WORKSLICES.md  DOCS_INDEX.md  HANDOFF_PLAN.md  LIVE_CONTROL_RESEARCH.md  QUALITY_GATES.md
docs/archive/: ARCHITECT_REVIEW.md  (+1 more)
scripts/: autopilot_bootstrap.sh  comprehensive_sweep.sh  cron_memory_maintenance.sh  live_testing_gate.sh  replay_certify.sh  server_rollout_smoke.sh  smoke_matrix.sh
tests/: test_action_ranker.py  test_actuators.py  test_agent_cli_commands.py  test_agent_console.py  test_anomaly_routing.py  test_antigravity_ingest.py  test_autopilot.py  test_autopilot_bootstrap_script.py  test_backfill_report.py  test_bundle_smoke.py  test_calibration_regression_fixture.py  test_changelog_ingest.py  test_changelog_stats.py  test_cli_surface_docs.py  test_codex_git_persistence.py  test_codex_parser_smoke.py  test_compose_security.py  test_comprehensive_sweep_script.py  test_confidence_audit.py  test_control_center.py  test_control_mode_alias.py  test_control_planes.py  test_cross_pattern.py  test_cross_repo_contracts.py  test_daily_report.py  test_db_migrations.py  test_docs_contract.py  test_evidence_query.py  test_evidence_utils.py  test_failover_profiles.py  test_fix_lineage.py  test_gate.py  test_git_context.py  test_git_history.py  test_guardian.py  test_harness_ingest.py  test_http_probe.py  test_incident_report.py  test_known_issues.py  test_live_monitor.py  (+36 more)
(+85 files in other folders)
